<resources>
    <string name="app_name">2022_q2_osovskoy</string>
    <string name="authSignUp">Выполните вход</string>
    <string name="authTitle">Добро пожаловать</string>
    <string name="authButtonText">Войти</string>
    <string name="regTitle">Регистрация</string>
    <string name="inputName">введите имя</string>
    <string name="inputPassword">введите пароль</string>
    <string name="regUp">введите имя и пароль</string>
    <string name="authError">"не правильное имя или пароль"</string>
    <string name="regError">"это имя уже занято"</string>

    <string name="registrationButtonText">Зарегистрироваться</string>

    <string name="inputNameEmpty">Введите имя</string>
    <string name="inputPasswordEmpty">Введите пароль</string>

    <string name="startRegistrationText">Уже есть аккаунт? Войти</string>
    <string name="startAuthText">Зарегистрироваться</string>
    <string name="exit">выйти из аккаунта</string>
    <string name="openLoanScreenText">оформить</string>
    <string name="loanInputName">имя</string>
    <string name="loanInputLastName">фамилия</string>
    <string name="loanInputPhone">телефон</string>
    <string name="loanInputAmount">сумма</string>
    <string name="loanInputPeriod">срок</string>
    <string name="requestSuccessText">Заявка оформлена</string>
    <string name="status">статус</string>
    <string name="settings">settings</string>
    <string name="cardRequestText">Ваша Банковская карта[Visa,MasterCard] под рукой, нужны только именные карты с CVV2 кодом на обороте</string>
    <string name="passportText">Цветной скан или копия Российского Паспорта ИНН, актуальная прописка на территории РФ</string>
    <string name="requestTitle">Чтобы получить займ вам понадобится</string>
    <string name="getMoney">Прийти в отеделение нашего банка и получить деньги</string>
    <string name="applyLoanButton">новая заявка</string>
    <string name="detailPeriod">Период</string>
    <string name="detailPercentText">Процент</string>
    <string name="detailDateText">Дата</string>

    <string name="detailAmountText">Сумма</string>

    <string name="inputLastNameEmpty">введите фамилию</string>
    <string name="inputPhoneEmpty">введите телефон</string>
    <string name="requestTitleText">Оформление заявки</string>
    <string name="requestAmountRow">Сумма:</string>
    <string name="requestPercentRow">Процент :</string>
    <string name="requestPeriodRow">Срок:</string>
    <string name="requestButtonText">Оформить Займ</string>
    <string name="successTitle">УСПЕХ!</string>
    <string name="requestHistoryButtonText">посмотреть историю</string>
    <string name="requestDetailsButtonText">Детали займа</string>
    <string name="loanInstruction">вводим имя фамилию телефон и получаем свой займ</string>
    <string name="simpleError">Ошибка</string>
    <string name="notFoundError">пользователь не найден</string>
    <string name="badRequestError">имя уже занято</string>
    <string name="forbiddenError">нет доступа</string>
    <string name="unauthorized">нужна авторизация</string>
    <string name="serverIsNotRespondingError"> сервер не отвечает,попробуйте позже</string>
    <string name="noInternetError"> нет интернет соединения</string>
    <string name="unknownError"> что то пошло не так</string>
    <string name="conditionAmountRow">Сумма:</string>
    <string name="conditionPercentRow">Процент :</string>
    <string name="conditionPeriodRow">Срок:</string>
    <string name="loanConditionHistoryButton">заявки</string>
    <string name="loanConditionTitle">Доступные заявки</string>
    <string name="instruction">Инструкция</string>
    <string name="conditionGetMoney">В деталях подтвержденной заявки будет информация как получить деньги</string>
    <string name="conditionChooseText">Выбрать заявку из доступных, понадобиться имя фамилия и телефон</string>
    <string name="conditionApprovalText">Дождаться подверждения вашей заявки не более 15 минут</string>
    <string name="emptyList">список пуст</string>
    <string name="detailsName">Имя</string>
    <string name="detailsLastName">Фамилия</string>
    <string name="detailsPhone">Телефон</string>
    <string name="id">Id</string>
    <string name="approved">ОДОБРЕНА</string>
    <string name="registered">ПРИНЯТА</string>
    <string name="rejected">ОТКЛОНЕНА</string>
    <string name="addPercent">%</string>
    <string name="addRub">руб</string>
    <string name="addDays">дн.</string>
    <string name="historyId">номер</string>
    <string name="historyDateAmount">дата,сумма</string>

</resources>