<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.loanhistory.LoanHistoryFragment">

    <Button
        android:id="@+id/logoutButton"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/applyNewLoanButton"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applyLoanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutButton" />


    <TextView
        android:id="@+id/historyLoanId"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/historyId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierRequestNewButton" />

    <TextView
        android:id="@+id/historyDateAndAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/historyDateAmount"
        app:layout_constraintEnd_toStartOf="@+id/historyStatus"
        app:layout_constraintStart_toEndOf="@id/historyLoanId"
        app:layout_constraintTop_toTopOf="@id/barrierRequestNewButton" />

    <TextView
        android:id="@+id/historyStatus"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierRequestNewButton"
        tools:layout_editor_absoluteY="64dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/loansSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/historyError">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/loansRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/loanConditionSwipeRefresh"
            app:layout_constraintEnd_toEndOf="@id/loanConditionSwipeRefresh"
            app:layout_constraintStart_toStartOf="@id/loanConditionSwipeRefresh"
            app:layout_constraintTop_toBottomOf="@id/loanConditionSwipeRefresh" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierRequestNewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="4dp"
        app:constraint_referenced_ids="applyNewLoanButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="historyLoanId,historyDateAndAmount,historyStatus" />

    <ProgressBar
        android:id="@+id/historyProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/loansListError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyList"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/historyError"
        style="@style/ErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTexts"
        tools:layout_editor_absoluteY="75dp"
        tools:text="ошибки"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>