<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.registration.RegistrationFragment">

    <LinearLayout
        android:id="@+id/regContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/authText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regTitle"
            style="@style/MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/regTitle" />

        <TextView
            android:id="@+id/regUp"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/regUp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regNameInput"
            style="@style/TextInputMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputName"
            app:boxStrokeColor="?colorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/change_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditMain"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/inputPassword"
            android:textColorHint="?colorPrimaryVariant"
            app:boxStrokeColor="?colorSecondary"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/change_title"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditMain"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regButton"
            style="@style/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/authText"
        style="@style/PrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/startRegistrationText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/regProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>