<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.loandetail.LoanDetailFragment">

        <TableLayout
            android:id="@+id/loanInfoTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/amount"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/detailAmountText" />

                <TextView
                    android:id="@+id/detailAmount"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/date"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/detailDateText" />

                <TextView
                    android:id="@+id/detailDate"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:id="@+id/percent"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/detailPercentText" />

                <TextView
                    android:id="@+id/detailPercent"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/period"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/detailPeriod" />

                <TextView
                    android:id="@+id/detailPeriod"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="Id" />

                <TextView
                    android:id="@+id/detailId"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/state"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="Статус" />

                <TextView
                    android:id="@+id/detailState"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/request"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="Запрошен" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/RowTextView"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    tools:text="@tools:sample/lorem" />
            </TableRow>
        </TableLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <LinearLayout
            android:id="@+id/approvalContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/loanInfoTable"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/requestTitle" />

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardRequestText" />

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/passport" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passportText" />

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/money" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getMoney" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>